--- a/OrangeBricks.Web/OrangeBricks.Web.csproj
+++ b/OrangeBricks.Web/OrangeBricks.Web.csproj
@@ -182,6 +182,10 @@
     <Compile Include="Controllers\Offers\OffersController.cs" />
     <Compile Include="Controllers\Offers\ViewModels\MyOffersViewModel.cs" />
     <Compile Include="Controllers\Offers\ViewModels\OffersOnPropertyViewModel.cs" />
+    <Compile Include="Controllers\Property\Commands\BookViewingCommand.cs" />
+    <Compile Include="Controllers\Property\Commands\BookViewingCommandHandler.cs" />
+    <Compile Include="Controllers\Property\ViewModels\BookViewingViewModel.cs" />
+    <Compile Include="Controllers\Property\Builders\BookViewingViewModelBuilder.cs" />
     <Compile Include="Controllers\Property\Builders\MakeOfferViewModelBuilder.cs" />
     <Compile Include="Controllers\Property\Builders\MyPropertiesViewModelBuilder.cs" />
     <Compile Include="Controllers\Property\Builders\PropertiesQuery.cs" />
@@ -234,6 +238,10 @@
     <Compile Include="Migrations\201704042129170_AddBuyerUserIdToOffers.Designer.cs">
       <DependentUpon>201704042129170_AddBuyerUserIdToOffers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704051331272_AddViewings.cs" />
+    <Compile Include="Migrations\201704051331272_AddViewings.Designer.cs">
+      <DependentUpon>201704051331272_AddViewings.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -242,6 +250,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Offer.cs" />
     <Compile Include="Models\Property.cs" />
+    <Compile Include="Models\Viewing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -299,6 +308,7 @@
     <Content Include="Views\Offers\OnProperty.cshtml" />
     <None Include="Views\Account\UnAuthorized.cshtml" />
     <Content Include="Views\Offers\MyOffers.cshtml" />
+    <Content Include="Views\Property\BookViewing.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -333,6 +343,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704042129170_AddBuyerUserIdToOffers.resx">
       <DependentUpon>201704042129170_AddBuyerUserIdToOffers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704051331272_AddViewings.resx">
+      <DependentUpon>201704051331272_AddViewings.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
