--- a/OrangeBricks.Web.Tests/OrangeBricks.Web.Tests.csproj
+++ b/OrangeBricks.Web.Tests/OrangeBricks.Web.Tests.csproj
@@ -96,7 +96,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ExtentionMethods.cs" />
+    <Compile Include="Controllers\Offers\Builders\MyOffersViewModelBuilderTest.cs" />
+    <Compile Include="Controllers\Property\Builders\BookViewingViewModelBuilderTest.cs" />
     <Compile Include="Controllers\Property\Builders\PropertiesViewModelBuilderTest.cs" />
+    <Compile Include="Controllers\Property\Commands\BookViewingCommandHandlerTest.cs" />
     <Compile Include="Controllers\Property\Commands\CreatePropertyCommandHandlerTest.cs" />
     <Compile Include="Controllers\Property\Commands\ListPropertyCommandHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -113,6 +117,7 @@
       <Name>OrangeBricks.Web</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
