--- a/OrangeBricks.Web.Tests/packages.config
+++ b/OrangeBricks.Web.Tests/packages.config
@@ -8,4 +8,5 @@
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnitTestAdapter" version="2.1.1" targetFramework="net45" />
 </packages>
